<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Randomly Typing LLC

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <!-- Titles -->
    <string name="app_name">Loving Lean Layouts</string>
    <string name="activity_title_hierarchy_viewer">What\'s All This Then?</string>
    <string name="activity_title_lint_warnings">Learning from Lint</string>
    <string name="activity_title_attributes">Use What You Got</string>
    <string name="activity_title_simpler_views">Simple Pleasures</string>
    <string name="activity_title_on_the_fly">On the Fly</string>
    <string name="activity_title_custom_views">Sir, Please. Look. My Stuff Is Custom</string>
    <string name="activity_title_fixed_it">Fixed It!</string>
    <string name="activity_title_about">About</string>

    <!-- Examples -->
    <string name="example_list_subheader">Examples</string>
    <string name="example_hierarchy_viewer">Hierarchy Viewer</string>
    <string name="example_lint_warnings">Learn from Lint</string>
    <string name="example_attributes">Using Attributes</string>
    <string name="example_simpler_views">Simpler Views</string>
    <string name="example_on_the_fly">On the Fly</string>
    <string name="example_custom_views">Custom Views</string>
    <string name="example_fixed_it">On the Fly</string>

    <!-- About -->
    <string name="about_subheader_icons">Icons</string>
    <string name="about_subheader_fonts">Fonts</string>

    <!-- Hierarchy Viewer -->
    <string name="hierarchy_viewer_attribution_unsplash">Pictures from Unsplash</string>
    <string name="hierarchy_viewer_overlay_text_01">Frutas</string>
    <string name="hierarchy_viewer_overlay_text_02">Fruit</string>
    <string name="hierarchy_viewer_overlay_text_03">Trái Cây</string>
    <string name="hierarchy_viewer_sample_text_01">Fruit</string>
    <string name="hierarchy_viewer_sample_text_02">Pastries</string>
    <string name="hierarchy_viewer_sample_text_03">Almonds</string>
    <string name="hierarchy_viewer_sample_text_04">Lemonade</string>
    <string name="hierarchy_viewer_status_bar_message_sample">Last Week\'s Topic: Photos That Make You Hungry</string>

    <!-- View Attributes -->
    <string name="view_attributes_text_01">Wibbly wobbly…</string>
    <string name="view_attributes_text_02">Timey wimey…</string>
    <string name="view_attributes_complex">non-linear</string>
    <string name="view_attributes_simple">non-subjective</string>

    <!-- Lint Warnings -->
    <string name="lint_useless_parent">Single View in a RelativeLayout</string>
    <string name="lint_useless_leaf_01">LinearLayout as a gap</string>
    <string name="lint_useless_leaf_02">Space widget</string>
    <string name="lint_nested_weights_01">Nested</string>
    <string name="lint_nested_weights_02">weights</string>
    <string name="lint_nested_weights_03">are</string>
    <string name="lint_nested_weights_04">not</string>
    <string name="lint_nested_weights_05">good!</string>
    <string name="lint_nested_layouts">Lottsa Layouts</string>

    <!-- Simpler Views -->
    <string name="simpler_views_text_A01">We have ridden the length and breadth of the land in search of knights who will join me in my court at Camelot. I must speak with your lord and master.</string>
    <string name="simpler_views_text_B01">What? Ridden on a horse?</string>
    <string name="simpler_views_text_A02">Yes.</string>

    <string name="simpler_views_text_B02">You\'re using coconuts!</string>
    <string name="simpler_views_text_A03">What?</string>
    <string name="simpler_views_text_B03">You\'ve got two empty halves of coconut and you\'re bangin\' \'em together.</string>

    <string name="simpler_views_text_C00">And the Lord spake, saying…</string>
    <string name="simpler_views_text_C01">First shalt thou take out the Holy Pin.</string>
    <string name="simpler_views_text_C02">Then shalt thou count to three, no more, no less. Three shall be the number thou shalt count, and the number of the counting shall be three.</string>

    <string name="simpler_views_text_C03">Four shalt thou not count, neither count thou two, excepting that thou then proceed to three.</string>
    <string name="simpler_views_text_C04">Five is right out.</string>
    <string name="simpler_views_text_C05">Once the number three, being the third number, be reached, then lobbest thou thy Holy Hand Grenade of Antioch towards thy foe, who, being naughty in My sight, shall snuff it.</string>

    <!-- On the Fly -->
    <string name="on_the_fly_inflate">Inflate</string>
    <string name="on_the_fly_who_are_you">Who Are You?</string>
    <string name="on_the_fly_view_inflate_02">There are some\nwho call me… Tim.</string>
    <string name="on_the_fly_view_stub_01">We are the\nKnights Who Say… NI!</string>

    <!-- Custom views -->
    <string name="custom_view_resource_id_format">R.id.%s</string>
</resources>