<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Randomly Typing LLC

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:ignore="RtlHardcoded">

    <!-- App bar -->
    <include layout="@layout/app_bar_default" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/simpler_views_text_margin_vertical"
                android:layout_marginBottom="@dimen/simpler_views_text_gap"
                android:layout_marginStart="@dimen/simpler_views_text_margin_horizontal"
                android:layout_marginEnd="@dimen/simpler_views_text_margin_horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="@dimen/simpler_views_text_gap"
                    android:text="@string/simpler_views_text_A01"
                    style="@style/TextAppearance.LLL.DialogueA" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="@dimen/simpler_views_text_gap"
                    android:text="@string/simpler_views_text_B01"
                    android:gravity="right"
                    style="@style/TextAppearance.LLL.DialogueB" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/simpler_views_text_A02"
                    style="@style/TextAppearance.LLL.DialogueA" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/i_am_just_a_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/simpler_views_text_margin_horizontal"
                android:layout_marginEnd="@dimen/simpler_views_text_margin_horizontal"
                android:layout_marginTop="@dimen/simpler_views_versions_gap"
                android:layout_marginBottom="@dimen/simpler_views_versions_gap"
                android:background="@drawable/shape_divider_default" />

            <TextView
                android:id="@+id/simple_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/simpler_views_text_gap"
                android:layout_marginBottom="@dimen/simpler_views_text_margin_vertical"
                android:layout_marginStart="@dimen/simpler_views_text_margin_horizontal"
                android:layout_marginEnd="@dimen/simpler_views_text_margin_horizontal"
                android:text="@string/simpler_views_text_B02"
                tools:gravity="right"
                style="@style/TextAppearance.LLL.DialogueB" />

            <include layout="@layout/divider_default" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/simpler_views_text_margin_vertical"
                android:layout_marginBottom="@dimen/simpler_views_text_gap"
                android:layout_marginStart="@dimen/simpler_views_text_margin_horizontal"
                android:layout_marginEnd="@dimen/simpler_views_text_margin_horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="@dimen/simpler_views_text_gap">

                    <TextView
                        android:layout_width="@dimen/simpler_views_narrow_block_width"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="@dimen/simpler_views_text_gap"
                        android:padding="@dimen/simpler_views_text_padding"
                        android:text="@string/simpler_views_text_C00"
                        android:background="@color/purple_500"
                        style="@style/TextAppearance.LLL.Monologue" />

                    <TextView
                        android:layout_width="@dimen/simpler_views_narrow_block_width"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="@dimen/simpler_views_text_gap"
                        android:padding="@dimen/simpler_views_text_padding"
                        android:text="@string/simpler_views_text_C01"
                        android:background="@color/blue_light_900"
                        style="@style/TextAppearance.LLL.Monologue" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="@dimen/simpler_views_text_gap"
                    android:padding="@dimen/simpler_views_text_padding"
                    android:text="@string/simpler_views_text_C02"
                    android:background="@color/orange_900"
                    style="@style/TextAppearance.LLL.MonologueBig" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="@dimen/simpler_views_text_margin_vertical"
                android:layout_marginStart="@dimen/simpler_views_text_margin_horizontal"
                android:layout_marginEnd="@dimen/simpler_views_text_margin_horizontal">

                <TextView
                    android:id="@+id/text_top_left"
                    android:layout_width="@dimen/simpler_views_narrow_block_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="@dimen/simpler_views_text_gap"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="@dimen/simpler_views_text_gap"
                    android:padding="@dimen/simpler_views_text_padding"
                    android:text="@string/simpler_views_text_C03"
                    android:background="@color/purple_500"
                    style="@style/TextAppearance.LLL.Monologue" />

                <TextView
                    android:layout_width="@dimen/simpler_views_narrow_block_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_top_left"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="@dimen/simpler_views_text_gap"
                    android:padding="@dimen/simpler_views_text_padding"
                    android:text="@string/simpler_views_text_C04"
                    android:background="@color/blue_light_900"
                    style="@style/TextAppearance.LLL.Monologue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/text_top_left"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="@dimen/simpler_views_text_gap"
                    android:padding="@dimen/simpler_views_text_padding"
                    android:text="@string/simpler_views_text_C05"
                    android:background="@color/orange_900"
                    style="@style/TextAppearance.LLL.MonologueBig" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>