<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Randomly Typing LLC

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!-- App bar -->
    <include layout="@layout/app_bar_default" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/lint_single_child_padding_vertical"
        android:paddingBottom="@dimen/lint_single_child_padding_vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lint_useless_parent"
                style="@style/TextAppearance.LLL.Lint" />

        </RelativeLayout>

    </RelativeLayout>

    <include layout="@layout/divider_default" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lint_useless_leaf_01"
            style="@style/TextAppearance.LLL.LintBody" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lint_useless_leaf_02"
            style="@style/TextAppearance.LLL.LintBody" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

    </LinearLayout>

    <include layout="@layout/divider_default" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lint_nested_weights_01"
                style="@style/TextAppearance.LLL.NestedWeights" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lint_nested_weights_02"
                style="@style/TextAppearance.LLL.NestedWeights" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lint_nested_weights_03"
                style="@style/TextAppearance.LLL.NestedWeights" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lint_nested_weights_04"
                style="@style/TextAppearance.LLL.NestedWeights" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lint_nested_weights_05"
                style="@style/TextAppearance.LLL.NestedWeights" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/divider_default" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/lint_single_nested_padding"
        android:background="@color/pink_500">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/lint_single_nested_padding">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/lint_single_nested_padding"
                android:background="@color/pink_500">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/lint_single_nested_padding"
                    android:background="@color/colorPrimary">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/lint_single_nested_padding"
                        android:background="@color/pink_500">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/lint_single_nested_padding"
                            android:background="@color/colorPrimary">

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/lint_single_nested_padding"
                                android:background="@color/pink_500">

                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/lint_single_nested_padding"
                                    android:background="@color/colorPrimary">

                                    <LinearLayout
                                        android:orientation="vertical"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/lint_single_nested_padding"
                                        android:background="@color/pink_500">

                                        <LinearLayout
                                            android:orientation="vertical"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:padding="@dimen/lint_single_nested_padding"
                                            android:background="@color/colorPrimary">

                                            <LinearLayout
                                                android:orientation="vertical"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:padding="@dimen/lint_single_nested_padding"
                                                android:background="@color/pink_500">

                                                <LinearLayout
                                                    android:orientation="vertical"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:padding="@dimen/lint_single_nested_padding"
                                                    android:background="@color/colorPrimary">

                                                    <LinearLayout
                                                        android:orientation="vertical"
                                                        android:layout_width="match_parent"
                                                        android:layout_height="wrap_content"
                                                        android:padding="@dimen/lint_single_nested_padding"
                                                        android:background="@color/pink_500">

                                                        <LinearLayout
                                                            android:orientation="vertical"
                                                            android:layout_width="match_parent"
                                                            android:layout_height="wrap_content"
                                                            android:padding="@dimen/lint_single_nested_padding"
                                                            android:background="@color/colorPrimary">

                                                            <LinearLayout
                                                                android:orientation="vertical"
                                                                android:layout_width="match_parent"
                                                                android:layout_height="wrap_content"
                                                                android:padding="@dimen/lint_single_nested_padding"
                                                                android:background="@color/pink_500">

                                                                <LinearLayout
                                                                    android:orientation="vertical"
                                                                    android:layout_width="match_parent"
                                                                    android:layout_height="wrap_content"
                                                                    android:padding="@dimen/lint_single_nested_padding"
                                                                    android:background="@color/colorPrimary">

                                                                    <LinearLayout
                                                                        android:orientation="vertical"
                                                                        android:layout_width="match_parent"
                                                                        android:layout_height="wrap_content"
                                                                        android:padding="@dimen/lint_single_nested_padding"
                                                                        android:background="@color/pink_500">

                                                                        <LinearLayout
                                                                            android:orientation="vertical"
                                                                            android:layout_width="match_parent"
                                                                            android:layout_height="wrap_content"
                                                                            android:padding="@dimen/lint_single_nested_padding"
                                                                            android:background="@color/colorPrimary">

                                                                            <LinearLayout
                                                                                android:orientation="vertical"
                                                                                android:layout_width="match_parent"
                                                                                android:layout_height="wrap_content"
                                                                                android:padding="@dimen/lint_single_nested_padding"
                                                                                android:background="@color/pink_500">

                                                                                <LinearLayout
                                                                                    android:orientation="vertical"
                                                                                    android:layout_width="match_parent"
                                                                                    android:layout_height="wrap_content"
                                                                                    android:padding="@dimen/lint_single_nested_padding"
                                                                                    android:background="@color/colorPrimary">

                                                                                    <LinearLayout
                                                                                        android:orientation="vertical"
                                                                                        android:layout_width="match_parent"
                                                                                        android:layout_height="wrap_content"
                                                                                        android:padding="@dimen/lint_single_nested_padding"
                                                                                        android:background="@color/pink_500">

                                                                                        <LinearLayout
                                                                                            android:orientation="vertical"
                                                                                            android:layout_width="match_parent"
                                                                                            android:layout_height="wrap_content"
                                                                                            android:padding="@dimen/lint_single_nested_padding"
                                                                                            android:background="@color/colorPrimary">

                                                                                            <TextView
                                                                                                android:layout_width="match_parent"
                                                                                                android:layout_height="wrap_content"
                                                                                                android:gravity="center"
                                                                                                android:text="@string/lint_nested_layouts"
                                                                                                style="@style/TextAppearance.LLL.LintBody" />


                                                                                        </LinearLayout>

                                                                                    </LinearLayout>

                                                                                </LinearLayout>

                                                                            </LinearLayout>

                                                                        </LinearLayout>

                                                                    </LinearLayout>

                                                                </LinearLayout>

                                                            </LinearLayout>

                                                        </LinearLayout>

                                                    </LinearLayout>

                                                </LinearLayout>

                                            </LinearLayout>

                                        </LinearLayout>

                                    </LinearLayout>

                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>